# lumens-code

./: GDAL_polygonize_R script.R  PRE-QUES change rev 2.R  PUR Reconcile by reference.R  PUR_ext_join_att_table.R  PUR_reconcile_by_reference map.model  ProjectHome.md  Projection_Hist_Baseline.rsx  QUES-C Interactive Report.R  QUES-C.R  QUES-C.rsx  QUES-H_watershed_indicators.R  QuES-B LUCHG analyisis.R  QuES-B focal area integration-segregation analysis.R  QuES-B multi_temporal_analysis.R  QuES-B protected area evaluation_MAR_DI.R  QuES-B.R  SCIENDO-SCENARIO Rev2.R  read abacus project file.R
abacus/: Paling_Baru.car  test1.car  test13.car  test14.car  test15.car  test17.car  test19.car  test20.car  test21.car  test3.car  test5.car  test7.car
model/: PUR_Reconcile by reference map_autojoin.model
processing/: CMakeLists.txt  notes.txt  resources.qrc  resources_rc.py  style.css
processing_r201409_kaltim/: ProcessingPlugin.py  ProcessingPlugin_.py
processing_r201412_sumsel/: .project
rsx/: Abacus_Projection_Scenario.rsx  PUR_add_sppu.rsx  Pre-QUES.rsx  QUESH_DHRU.rsx  QuES-B multiple time series.rsx  TA_REG_LD_LR.rsx
rsx_LUMENS_Project/: LUMENS_create_project.rsx
script/: PUR Reconcile by reference.R  luc_modeling.R  (+4 more)
trunk/processing/molusce/algorithms/models/: CMakeLists.txt
trunk/processing/molusce/algorithms/models/crosstabs/: CMakeLists.txt  model.py
trunk/processing/molusce/algorithms/models/mce/: CMakeLists.txt
trunk/processing/molusce/algorithms/models/sampler/: CMakeLists.txt
trunk/processing/molusce/algorithms/models/simulator/: CMakeLists.txt
(+195 files in other folders)
